--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "senior",
 	"version": "0.1.0",
+	"typescript": "^4.9.5",
 	"private": true,
 	"dependencies": {
 		"@testing-library/dom": "^10.4.0",
